[tool.poetry]
name = "instaclone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
pyjwt = "^2.10.1"
pydantic-settings = "^2.7.1"
aiomysql = "^0.2.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
greenlet = "^3.1.1"
alembic = "^1.14.0"
cryptography = "^44.0.0"
python-multipart = "^0.0.20"
boto3 = "^1.35.92"
websocket = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
